<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="111dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@id/text_view_priority"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@id/text_view_title"
            android:text="@string/description" />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="23dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/totalCheckmarkDuration"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="114dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="182dp"
            android:text="Toplam Süre"></TextView>

        <Button
            android:id="@+id/addCheckmarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150px"
            android:text="+">

        </Button>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="120dp"
            android:layout_height="26dp"
            android:layout_alignEnd="@+id/text_view_title"
            android:layout_alignBottom="@+id/text_view_description"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="255dp"
            android:layout_marginBottom="-49dp"
            android:text="Total minutes:" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>